--- a/templates/login.phtml
+++ b/templates/login.phtml
@@ -6,25 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="/CSS/style.css"/>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Georama">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script defer src="/JS/login.js"></script>
 </head>
-    <nav>
-
+<body class="container-fluid px-0">
+    <nav class="navbar row navbar-light mx-0">
+        <h1 class="col-12 text-center my-3">Fish Food</h1>
     </nav>
-    <body class="container">
-        <h1 class="text-center my-3">Welcome to Fish Food</h1>
-        <h3 class="text-center my-3">Please Log In</h3>
-        <section class="form-group justify-content-center d-flex my-5">
-            <form method="POST">
-                <input type="text" class="form-control my-3" id="emailInput" name="email" placholde="Enter email here" />
-                <small class="form-text text-muted mb-3">If this is your first visit a new account will be created</small>
-                <button id="loginBtn" class="btn btn-secondary" type="submit">Submit</button>
+    <main class="py-5">
+        <section class="form-group  justify-content-center d-flex my-5">
+            <form class="loginForm d-inline text-center border align-middle rounded m-5 p-5" method="POST">
+                <h3 class="text-center mt-2 mb-5">Please Log In</h3>
+                <input type="text" class="form-control my-3" id="emailInput" name="email" placeholder="Enter email here" />
+                <p class="form-text fs-6 mb-3">If this is your first visit a new account will be created</p>
+                <button id="loginBtn" class="btn btn-lg btn-secondary mt-5 mb-2" type="submit">Submit</button>
+                <div class="loginMessage text-center text-danger">
+                    </div> 
             </form>
         </section>
-        <div class="loginMessage text-center text-danger">
-        </div> 
-    </body>
+    </main>
+</body>
 </html>
