--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -15,5 +15,8 @@
     <nav class="navbar row navbar-light mx-0">
         <h1 class="col-12 text-center my-3">Fish Food</h1>
     </nav>
+    <main>
+        <?= \App\ViewHelpers\RecipeViewhelper::displayUserRecipes($userRecipes) ?>
+    </main>
 </body>
 </html>
