--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -10,10 +10,37 @@
           href="https://fonts.googleapis.com/css2?family=Georama">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script defer src="/JS/home.js"></script>
 </head>
 <body class="container-fluid px-0">
     <nav class="navbar row navbar-light mx-0">
-        <h1 class="col-12 text-center my-3">Fish Food</h1>
+        <h1 class="col-8 offset-2 text-center my-3">Fish Food</h1>
+        <div class="col-2">
+            <button id="addRecipeBtn" class="btn btn-success py-0">+</button>
+        </div>
     </nav>
+    <div class="col-12 addRecipeAccordion">
+        <h2 class="text-center" >Add a new recipe</h2>
+        <form class="d-flex justify-content-center align-items center flex-column">
+            <label for="recipeName">Recipe Name</label>
+            <input type="text" name="recipeName" id="recipeName" />
+            <div class="d-flex justify-content-center align-items center flex-column">
+                <label for="duration">Duration (minutes)</label>
+                <input type="text" name="duration" id="duration" />
+            </div>
+            <p class="text-center fw-bold py-4">OR</p>
+            <div class="d-flex justify-content-center align-items center flex-column">
+                <label for="cookingTime">Cooking Time (minutes)</label>
+                <input type="text" name="cookingTime" id="cookingTime" />
+                <label for="prepTime">Prep Time (minutes)</label>
+                <input type="text" name="prepTime" id="prepTime" />
+            </div>
+            <label for="instructions">Instructions</label>
+            <input type="text" name="instructions" id="instructions" />
+            <div>
+                <input type="submit" class="btn btn-success my-3" />
+            </div>
+        </form>
+    </div>
 </body>
 </html>
