--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -24,12 +24,12 @@
         <form class="d-flex justify-content-center align-items center flex-column">
             <label for="recipeName">Recipe Name</label>
             <input type="text" name="recipeName" id="recipeName" />
-            <div class="d-flex justify-content-center align-items center flex-column">
+            <div class="d-flex justify-content-center align-items center flex-column border border-dark mt-3 p-4 cookingTimes">
                 <label for="duration">Duration (minutes)</label>
                 <input type="text" name="duration" id="duration" />
             </div>
-            <p class="text-center fw-bold py-4">OR</p>
-            <div class="d-flex justify-content-center align-items center flex-column">
+            <p class="text-center fw-bold pt-1">OR</p>
+            <div class="d-flex justify-content-center align-items center flex-column border border-dark mb-3 p-4 cookingTimes">
                 <label for="cookingTime">Cooking Time (minutes)</label>
                 <input type="text" name="cookingTime" id="cookingTime" />
                 <label for="prepTime">Prep Time (minutes)</label>
