started js validation and sanitisation of add recipe form

--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -38,7 +38,7 @@
             <label for="instructions">Instructions</label>
             <input type="text" name="instructions" id="instructions" />
             <div>
-                <input type="submit" class="btn btn-success my-3" />
+                <input type="submit" class="btn btn-success submitRecipeBtn my-3" />
             </div>
         </form>
     </div>
