added valdiation for recipe form and create functionality to get form data

--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -21,7 +21,7 @@
     </nav>
     <div class="col-12 addRecipeAccordion">
         <h2 class="text-center" >Add a new recipe</h2>
-        <form class="d-flex justify-content-center align-items center flex-column">
+        <form id="newRecipeForm" class="d-flex justify-content-center align-items center flex-column">
             <label for="recipeName">Recipe Name</label>
             <input type="text" name="recipeName" id="recipeName" />
             <div class="d-flex justify-content-center align-items center flex-column border border-dark mt-3 p-4 cookingTimes">
