--- a/templates/login.phtml
+++ b/templates/login.phtml
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="/CSS/style.css"/>
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Georama">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Georama">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script defer src="/JS/login.js"></script>
