--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -21,25 +21,26 @@
     </nav>
     <div class="col-12 addRecipeAccordion">
         <h2 class="text-center" >Add a new recipe</h2>
-        <form id="newRecipeForm" class="d-flex justify-content-center align-items center flex-column">
+        <form id="newRecipeForm" class="d-flex justify-content-center align-items center flex-column pb-5">
             <label for="recipeName">Recipe Name</label>
-            <input type="text" name="recipeName" id="recipeName" />
+            <input type="text" class="recipeInput" name="recipeName" id="recipeName" data-required="true"/>
             <div class="d-flex justify-content-center align-items center flex-column border border-dark mt-3 p-4 cookingTimes">
                 <label for="duration">Duration (minutes)</label>
-                <input type="text" name="duration" id="duration" />
+                <input type="text" class="recipeInput" name="duration" id="duration" data-required="true"/>
             </div>
             <p class="text-center fw-bold pt-1">OR</p>
             <div class="d-flex justify-content-center align-items center flex-column border border-dark mb-3 p-4 cookingTimes">
                 <label for="cookingTime">Cooking Time (minutes)</label>
-                <input type="text" name="cookingTime" id="cookingTime" />
+                <input type="text" class="recipeInput" name="cookingTime" id="cookingTime" />
                 <label for="prepTime">Prep Time (minutes)</label>
-                <input type="text" name="prepTime" id="prepTime" />
+                <input type="text" class="recipeInput" name="prepTime" id="prepTime" />
             </div>
             <label for="instructions">Instructions</label>
-            <input type="text" name="instructions" id="instructions" />
+            <textarea type="text" class="recipeInput" name="instructions" id="instructions" data-required="true" data-max="5000" maxlength="5000"></textarea>
             <div>
                 <input type="submit" class="btn btn-success submitRecipeBtn my-3" />
             </div>
+            <div class="mb-5" id="messages" class="alert"></div>
         </form>
     </div>
 </body>
