--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -43,4 +43,15 @@ body {
     display: inline-block;
     height: 2rem;
     width: 2rem;
+    font-size: 1.2rem;
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
 }
+
+.recipe-button:hover {
+    background-color: #4d9e51;
+  }
