created setrequired fields function and continued with validation

--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -26,7 +26,7 @@
             <input type="text" class="recipeInput" name="recipeName" id="recipeName" data-required="true"/>
             <div class="d-flex justify-content-center align-items center flex-column border border-dark mt-3 p-4 cookingTimes">
                 <label for="duration">Duration (minutes)</label>
-                <input type="text" class="recipeInput" name="duration" id="duration" data-required="true"/>
+                <input type="text" class="recipeInput" name="duration" id="duration" />
             </div>
             <p class="text-center fw-bold pt-1">OR</p>
             <div class="d-flex justify-content-center align-items center flex-column border border-dark mb-3 p-4 cookingTimes">
