--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -23,24 +23,28 @@
         <h2 class="text-center" >Add a new recipe</h2>
         <form id="newRecipeForm" class="d-flex justify-content-center align-items center flex-column pb-5">
             <label for="recipeName">Recipe Name</label>
-            <input type="text" class="recipeInput" name="recipeName" id="recipeName" data-required="true"/>
+            <input type="text" class="recipeInput strInput" name="recipeName" id="recipeName" data-required="true"/>
+            <p></p>
             <div class="d-flex justify-content-center align-items center flex-column border border-dark mt-3 p-4 cookingTimes">
                 <label for="duration">Duration (minutes)</label>
-                <input type="text" class="recipeInput" name="duration" id="duration" />
+                <input type="text" class="recipeInput numInput" name="duration" id="duration" />
+                <p></p>
             </div>
             <p class="text-center fw-bold pt-1">OR</p>
             <div class="d-flex justify-content-center align-items center flex-column border border-dark mb-3 p-4 cookingTimes">
                 <label for="cookingTime">Cooking Time (minutes)</label>
-                <input type="text" class="recipeInput" name="cookingTime" id="cookingTime" />
+                <input type="text" class="recipeInput numInput" name="cookingTime" id="cookingTime" />
+                <p></p>
                 <label for="prepTime">Prep Time (minutes)</label>
-                <input type="text" class="recipeInput" name="prepTime" id="prepTime" />
+                <input type="text" class="recipeInput numInput" name="prepTime" id="prepTime" />
+                <p></p>
             </div>
             <label for="instructions">Instructions</label>
-            <textarea type="text" class="recipeInput" name="instructions" id="instructions" data-required="true" data-max="5000" maxlength="5000"></textarea>
+            <textarea type="text" class="recipeInput insInput" name="instructions" id="instructions" data-required="true" data-max="5000" maxlength="5000"></textarea>
+            <p></p>
             <div>
                 <input type="submit" class="btn btn-success submitRecipeBtn my-3" />
             </div>
-            <div class="mb-5" id="messages" class="alert"></div>
         </form>
     </div>
 </body>
