added valiation for cooking/prep times

--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -29,6 +29,7 @@
                 <label for="duration">Duration (minutes)</label>
                 <input type="text" class="recipeInput numInput" name="duration" id="duration" />
                 <p></p>
+                <p id="alerts"></p>
             </div>
             <p class="text-center fw-bold pt-1">OR</p>
             <div class="d-flex justify-content-center align-items center flex-column border border-dark mb-3 p-4 cookingTimes">
