--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -29,7 +29,7 @@
                 <label for="duration">Duration (minutes)</label>
                 <input type="text" class="recipeInput numInput" name="duration" id="duration" />
                 <p></p>
-                <p id="alerts"></p>
+                <p id="durationAlerts"></p>
             </div>
             <p class="text-center fw-bold pt-1">OR</p>
             <div class="d-flex justify-content-center align-items center flex-column border border-dark mb-3 p-4 cookingTimes">
@@ -47,6 +47,7 @@
                 <input type="submit" class="btn btn-success submitRecipeBtn my-3" />
             </div>
         </form>
+        <div id="alerts"></div>
     </div>
 </body>
 </html>
