--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Georama:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script defer src="/JS/recipeList.js"></script>
 </head>
 <body class="container-fluid px-0">
     <nav class="navbar row navbar-light mx-0">
