--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -45,10 +45,10 @@
             <textarea type="text" class="recipeInput insInput" name="instructions" id="instructions" data-required="true" data-max="5000" maxlength="5000"></textarea>
             <p></p>
             <div>
-                <input type="submit" class="btn btn-success submitRecipeBtn my-3" />
+                <input type="submit" class="btn btn-success submitRecipeBtn mt-3 mb-5" />
             </div>
+            <div id="alerts" class="pb-2"></div>
         </form>
-        <div id="alerts"></div>
     </div>
     <main class="container-fluid">
         <div class="row justify-content-center m-1">
