edited error messages css

--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -25,29 +25,29 @@
         <form id="newRecipeForm" class="d-flex justify-content-center align-items center flex-column pb-5">
             <label for="recipeName">Recipe Name</label>
             <input type="text" class="recipeInput strInput" name="recipeName" id="recipeName" data-required="true"/>
-            <p></p>
+            <p class="errorMessages" ></p>
             <div class="d-flex justify-content-center align-items center flex-column border border-dark mt-3 p-4 cookingTimes">
                 <label for="duration">Duration (minutes)</label>
                 <input type="text" class="recipeInput numInput" name="duration" id="duration" />
-                <p></p>
-                <p id="durationAlerts"></p>
+                <p class="errorMessages" ></p>
+                <p class="errorMessages"  id="durationAlerts"></p>
             </div>
             <p class="text-center fw-bold pt-1">OR</p>
             <div class="d-flex justify-content-center align-items center flex-column border border-dark mb-3 p-4 cookingTimes">
                 <label for="cookingTime">Cooking Time (minutes)</label>
                 <input type="text" class="recipeInput numInput" name="cookingTime" id="cookingTime" />
-                <p></p>
+                <p class="errorMessages" ></p>
                 <label for="prepTime">Prep Time (minutes)</label>
                 <input type="text" class="recipeInput numInput" name="prepTime" id="prepTime" />
-                <p></p>
+                <p class="errorMessages" ></p>
             </div>
             <label for="instructions">Instructions</label>
             <textarea type="text" class="recipeInput insInput" name="instructions" id="instructions" data-required="true" data-max="5000" maxlength="5000"></textarea>
-            <p></p>
+            <p class="errorMessages" ></p>
             <div>
                 <input type="submit" class="btn btn-success submitRecipeBtn mt-3 mb-5" />
             </div>
-            <div id="alerts" class="pb-2"></div>
+            <div class="errorMessages"  id="alerts" class="pb-2"></div>
         </form>
     </div>
     <main class="container-fluid">
