--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -29,6 +29,14 @@ body {
 
 #addRecipeBtn {
     font-size: 2rem;
+    height: 3rem;
+    width: 3rem;
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
 }
 
 .addRecipeAccordion {
@@ -43,10 +51,6 @@ body {
 }
 
 .cookingTimes {
-    background-color: #a8ebeb;
-}
-
-.recipe {
     background-color: #a8ebeb;
 }
 
