--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -18,7 +18,7 @@
     <nav class="navbar row navbar-light mx-0">
         <h1 class="col-8 offset-2 text-center my-3">Fish Food</h1>
         <div class="col-2">
-            <button id="addRecipeBtn" class="btn btn-success py-0">+</button>
+            <button id="addRecipeBtn" class="btn py-0">+</button>
         </div>
     </nav>
     <div class="col-12 addRecipeAccordion">
