--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -13,6 +13,12 @@ body {
     background-size: cover;
     height: 100vh;
     background-position: center;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+
+body::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
 }
 
 .loginForm {
