added remove button for each ingredient. removes from list. wip need to remove from ing array

--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -51,7 +51,7 @@
                     <input type="text" class="ingredientsInput strInput w-100" name="ingredients" id="ingredients" />
                     <button class="ingredients-button mx-3">+</button>
                 </div>
-                <ul></ul>
+                <ul class="ingredients-list"></ul>
                 <p class="errorMessages" ></p>
             </div>
             <div>
