--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -118,3 +118,20 @@ body::-webkit-scrollbar {
     text-decoration: none;
     border-radius: 4px;
 }
+
+.remove-ingredient-button {
+    display: inline-block;
+    height: 2rem;
+    width: 2rem;
+    font-size: 1rem;
+    background-color: transparent;
+    border: none;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+.remove-ingredient-button:hover {
+    color: rgb(193, 41, 41);
+}
