--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -23,7 +23,7 @@
     </nav>
     <div class="col-12 addRecipeAccordion">
         <h2 class="text-center" >Add a new recipe</h2>
-        <form id="newRecipeForm" class="d-flex justify-content-center align-items center flex-column pb-5">
+        <form id="newRecipeForm" class="d-flex justify-content-center align-items center flex-column">
             <label for="recipeName">Recipe Name</label>
             <input type="text" class="recipeInput strInput" name="recipeName" id="recipeName" data-required="true"/>
             <p class="errorMessages" ></p>
@@ -55,7 +55,7 @@
                 <p class="errorMessages" ></p>
             </div>
             <div>
-                <input type="submit" class="btn btn-success submitRecipeBtn mt-3 mb-5" />
+                <input type="submit" class="btn btn-success submitRecipeBtn my-2" />
             </div>
             <div class="errorMessages"  id="alerts" class="pb-2"></div>
         </form>
