added validation when adding ingredient for string and to avoid duplicates.

--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -51,8 +51,10 @@
                     <input type="text" class="ingredientsInput strInput w-100" name="ingredients" id="ingredients" />
                     <button class="ingredients-button mx-3">+</button>
                 </div>
-                <ul class="ingredients-list"></ul>
-                <p class="errorMessages" ></p>
+                <div>
+                    <p class="ingredientErrorMessage errorMessages mx-3" ></p>
+                    <ul class="ingredients-list"></ul>
+                </div>
             </div>
             <div>
                 <input type="submit" class="btn btn-success submitRecipeBtn my-2" />
