--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -48,7 +48,7 @@
             <div class="row">
                 <label class="col-12" for="ingredients">Ingredients</label>
                 <div class="col-12 d-flex align-items-center">
-                    <input type="text" class="ingredientsInput strInput w-100" name="ingredients" id="ingredients" />
+                    <input list="ingredientsList" type="text" class="ingredientsInput strInput w-100" name="ingredients" id="ingredients" />
                     <datalist id="ingredientsList"></datalist>
                     <button class="ingredients-button mx-3">+</button>
                 </div>
