--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -47,7 +47,23 @@ body::-webkit-scrollbar {
 
 #addRecipeBtn:hover {
     background-color: #4d9e51;
-} 
+}
+
+#filter-button {
+    font-size: 1rem;
+    height: 3rem;
+    width: auto;
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+#filter-button:hover {
+    background-color: #4d9e51;
+}
 
 .addRecipeAccordion {
     background-color: rgb(208, 244, 247);
