--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -15,9 +15,12 @@
     <script defer src="/JS/recipeList.js"></script>
 </head>
 <body class="container-fluid px-0">
-    <nav class="navbar row navbar-light mx-0">
-        <h1 class="col-8 offset-2 text-center my-3">Fish Food</h1>
-        <div class="col-2">
+    <nav class="navbar row navbar-light mx-0 p-0 justify-content-between">
+        <div class="col-2 p-0 d-flex justify-content-center">
+            <button id="filter-button" class="btn py-0">Filter</button>
+        </div>
+        <h1 class="col-8 offset-2 text-center my-3 mx-0">Fish Food</h1>
+        <div class="col-2 p-0 d-flex justify-content-center">
             <button id="addRecipeBtn" class="btn py-0">+</button>
         </div>
     </nav>
