--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -24,6 +24,9 @@
             <button id="addRecipeBtn" class="btn py-0">+</button>
         </div>
     </nav>
+    <div class="col-12 filter-accordion">
+        <h2 class="text-center" >Filter recipes</h2>
+    </div>
     <div class="col-12 addRecipeAccordion">
         <h2 class="text-center" >Add a new recipe</h2>
         <form autocomplete="off" id="newRecipeForm" class="d-flex justify-content-center align-items center flex-column">
