changed h1 to link to return home, amended styling to conform to wireframe more

--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -116,6 +116,17 @@ body::-webkit-scrollbar {
     font-size: 1rem;
 }
 
+a {
+    text-decoration: none;
+    color: #000000;
+    white-space: nowrap;
+}
+
+a:hover {
+    text-decoration: none;
+    color: #000000;
+}
+
 .recipe-button {
     display: inline-block;
     height: 2rem;
