added fixes to db connection and composer json. renamed recipe model file and recipe viewhelper class as these were incorrect and did not work. removed a backslash in home phtml. added logic on homepagecontroller to check if loggedin session is set as well as being true, as this was not working for me either

--- a/templates/home.phtml
+++ b/templates/home.phtml
@@ -76,7 +76,7 @@
     </div>
     <main class="container-fluid">
         <div class="row justify-content-center m-1">
-            <?= \App\ViewHelpers\RecipeViewhelper::displayUserRecipes($userRecipes) ?>
+            <?= App\ViewHelpers\RecipeViewHelper::displayUserRecipes($userRecipes) ?>
         </div>
     </main>
 </body>
